# rust-actix-web-auth-server

./: .gitignore  Cargo.toml  README.md  app.http
src/: main.rs  models.rs  mongo_connection.rs  routes.rs  utils.rs
src/templates/: client_registration.html  client_registration_successful.html  index.html  login.html
