[package]
name = "oauth_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
bcrypt = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.20"
mongodb = "2.6.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tera = "1.19.1"
uuid = "1.4.1"


